Fixed Width Problem with Scrollbar

--- a/SBS/css/main.css
+++ b/SBS/css/main.css
@@ -10,7 +10,6 @@ body {
 	font-size: 14px;
 	background-color: #111215;
 	background: url(/themes/SBS/images/blur_dark.jpg) no-repeat center center fixed;
-	min-width: 768px !important;
 }
 .ftp_iframe {
         background: transparent !important;
@@ -35,7 +34,7 @@ dl, ol, ul {
 }
 
 .logo {
-	margin: 20px 10px;
+	padding: 20px;
 }
 h4.collapse {
 	display: block !important;
@@ -295,7 +294,7 @@ a:before {
 }
 
 .menu a:before {
-	width: 18px;
+	width: 22px;
 	display: inline-block;
 }
 .menu .tree:before {
@@ -358,3 +357,6 @@ a:before {
 [href^="?m=util"]:before { content: "\f0ad"; }
 [href^="?m=lgsl_with_img_mod"]:before { content: "\f022"; }
 [href^="?m=news"]:before { content: "\f1ea"; }
+[href^="?m=register"]:before { content: "\f067"; }
+[href="?logout"]:before { content: "\f08b"; }
+[href="index.php"]:before { content: "\f0e4"; }
